fix: Wardrobe Page — Styling & Cropped Image Resolution
Styling
- Images now take up entire width of column

Cropped Image Resolution
- react-image-crop used to take only the selected area of the actual pixels cropped, and not relative to the original image size.
- Images now are cropped at their full Resolution

Resources:
- react-image-crop low resolution: https://stackoverflow.com/a/67803374

--- a/styles/pages/Wardrobe.module.scss
+++ b/styles/pages/Wardrobe.module.scss
@@ -14,6 +14,7 @@
   &__item {
     display: inline-block;
     margin-bottom: 1rem;
+    width: 100%;
   }
 
   &__text {
